# circuitSolver

./: .gitignore  CMakeLists.txt  Makefile  README.md  branch.h  circuitGraph.cpp  circuitGraph.h  circuitGraph.proto  circuitGraphMessage.proto  circuitGraphSchema.json  currentSource.h  expression.cpp  expression.h  frontendPlan.md  graph.cpp  graph.h  idealDiode.h  main.cpp  r-branch.cpp  r-branch.h  realDiode.h  resistor.h  solver.cpp  solver.h  v-branch.cpp  v-branch.h  variable.h  voltageSource.h  zenerDiode.h
circuit_solver/v1/: circuit_graph_message.proto
include/circuitsolver/: circuitGraph.h  edge.h  expression.h  expressionCostFunctor.h  expressionNode.h  vertex.h
include/circuitsolver/components/: currentSource.h  edge.h  idealDiode.h  realDiode.h  resistor.h  vertex.h  voltageSource.h  zenerDiode.h
include/circuitsolver/math/: expression.h  expressionCostFunction.h  expressionNode.h
math/: additionNode.h  condition.h  conditionNode.h  divisionNode.h  exponentiationNode.h  expression.cpp  expression.h  expressionCostFunction.h  expressionNode.h  multiplicationNode.h  negationNode.h  subtractionNode.h  variable.h
src/: api.cpp  api.h  branch.cpp  branch.h  circuitGraph.cpp  circuitGraph.h  circuitGraphSchema.json  edge.cpp  edge.h  expression.cpp  expression.h  expressionCostFunctor.h  expressionNode.cpp  expressionNode.h  main.cpp  proto.h  vertex.h
src/components/: currentSource.h  edge.cpp  edge.h  idealDiode.h  realDiode.h  resistor.h  vertex.h  voltageSource.h  zenerDiode.h
src/math/: condition.h  divisionNode.h  expression.cpp  expression.h  subtractionNode.h
test/: 001-solved.json  001-unsolved.json  circuit.cpp  math.cpp  math_test.cpp  utils.cpp  utils.h
test/data/: 001-solved.json  001-unsolved.json
